--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="mailto:name@email.com">Lu.Chien@uta.fi</a>/
             <a>B2026</a>
           </div>
-          <p class="mb-5">I am a doctoral researcher at the University of Tampere under the supervision of <a href = "http://www.sis.uta.fi/~tojape/">Jaakko Peltonen</a> and <a href = "http://www.uta.fi/sis/yhteystiedot/henkilokunta/timonummenmaa.html">Timo Nummenmaa</a>. I am a member of the <a href="http://www.sis.uta.fi/~tojape/smile.shtml">SMiLE research group</a> and <a href = "https://coe-gamecult.org/">CoE GameCult</a>. My research focuses on Bayesian approach and its applications to game culture studies. I have also cooperated with researchers from other disciplines such as business and management.</p>
+          <p class="mb-5">I am a doctoral researcher at University of Tampere under the supervision of <a href = "http://www.sis.uta.fi/~tojape/">Jaakko Peltonen</a> and <a href = "http://www.uta.fi/sis/yhteystiedot/henkilokunta/timonummenmaa.html">Timo Nummenmaa</a>. I am a member of the <a href="http://www.sis.uta.fi/~tojape/smile.shtml">SMiLE research group</a> and <a href = "https://coe-gamecult.org/">CoE GameCult</a>. My research focuses on Bayesian approach and its applications to game culture studies. I have also cooperated with researchers from other disciplines such as business and management.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
@@ -95,20 +95,16 @@
           <h2 class="mb-5">Research</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Bayesian methodology development</h3>
-              <div class="subheading mb-3"><i class="fas fa-pencil-alt"></i> Text mining</div>
-              <p>My research focuses on problems such as multiple text sources and discovering underlying temporal dynamics of topics.</p><div class="subheading mb-3"><i class="fas fa-pencil-alt"></i> Survey data analysis</div>
-              <p>I am currently working on developing models for collective analysis of quantitive and qualitative data, cross-survey data analysis.</p>
+              <h3 class="mb-0"><i class="fas fa-object-group"></i> Bayesian methodology development</h3>
+              <p>My research focuses on text mining related problems such as multiple sources, collective analysis and underlying temporal dynamics.</p>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Collatorative Works</h3>
-              <div class="subheading mb-3"><i class="fas fa-handshake"></i> Game Culture Studies</div>
+              <h3 class="mb-0"><i class="fas fa-handshake"></i> Collatorative Works</h3>
               <p>I mainly cooperate with researchers from the <a href = "https://coe-gamecult.org/">CoE GameCult</a> currently, we focus on issues such as establishing game genres and player experience studies.</p>
-              <div class="subheading mb-3"><i class="fas fa-handshake"></i> Others</div>
-              <p>I also have worked with researchers from other fields.</p>
+              
             </div>
           </div>
         </div>
