--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-book text-warning"></i>
-              A Dynamic Non-negative Bayesian Group Factor Model for Cross-Domain Text Mining (Submitted)<!-- <a>[link]</a> --></li>
+              Chien Lu, Jaakko Peltonen, Jyrki Nummenmaa and Kalervo Järvelin. A Dynamic Non-negative Bayesian Group Factor Model for Cross-Domain Text Mining (Submitted)<!-- <a>[link]</a> --></li>
             <li>
               <i class="fa-li fa fa-book text-warning"></i>
-              The usage of large data sets in consumer online behaviour: A bibliometric and computational text-mining–driven analysis of previous research (Submitted) <!--<a>[link]</a>--></li>
+              Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna-Katriina Asikainen, Jyrki Nummenmaa and Kalervo Järvelin. The usage of large data sets in consumer online behaviour: A bibliometric and computational text-mining–driven analysis of previous research (Submitted) <!--<a>[link]</a>--></li>
           </ul>
         </div>
       </section>
