--- a/index.html
+++ b/index.html
@@ -138,9 +138,12 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="teaching">
         <div class="my-auto">
-          <h2 class="mb-5">Teaching</h2>
+          <p>So Far No</p>
+          <img src="img/dog_poo_luck.png" alt="So far no" style="width:500px;height:400px;">
+
+          <!--<h2 class="mb-5">Teaching</h2>
           <div class="subheading mb-3">Office Hours</div>
-              <p>Tuesday 11:00-13:00, Thursday 12:00-14:00 (B2026)</p>
+              <p>Tuesday 11:00-13:00, Thursday 12:00-14:00 (B2026)</p>-->
           <!--
           <div class="subheading mb-3">Materials and Tutorials</div>
           <ul class="list-inline list-icons">
