--- a/index.html
+++ b/index.html
@@ -170,15 +170,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
-          <h2 class="mb-5">Publications</h2>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-book text-warning"></i>
-              Chien Lu, Jaakko Peltonen, Jyrki Nummenmaa and Kalervo Järvelin. A Dynamic Non-negative Bayesian Group Factor Model for Cross-Domain Text Mining (Submitted)<!-- <a>[link]</a> --></li>
-            <li>
-              <i class="fa-li fa fa-book text-warning"></i>
-              Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna-Katriina Asikainen, Jyrki Nummenmaa and Kalervo Järvelin. The usage of large data sets in consumer online behaviour: A bibliometric and computational text-mining–driven analysis of previous research (Submitted) <!--<a>[link]</a>--></li>
-          </ul>
+          So Far No
         </div>
       </section>
 
