--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="mailto:name@email.com">Lu.Chien@uta.fi</a>/
             <a>B2026</a>
           </div>
-          <p class="mb-5">I am a doctoral researcher at University of Tampere under the supervision of <a href = "http://www.sis.uta.fi/~tojape/">Jaakko Peltonen</a> and <a href = "http://www.uta.fi/sis/yhteystiedot/henkilokunta/timonummenmaa.html">Timo Nummenmaa</a>. I am a member of the <a href="http://www.sis.uta.fi/~tojape/smile.shtml">SMiLE research group</a> and <a href = "https://coe-gamecult.org/">CoE GameCult</a>. My research focuses on Bayesian approach and its applications to game culture studies. I have also cooperated with researchers from other disciplines such as business and management.</p>
+          <p class="mb-5">I am a doctoral researcher at Tampere University under the supervision of <a href = "http://www.sis.uta.fi/~tojape/">Jaakko Peltonen</a> and <a href = "http://www.uta.fi/sis/yhteystiedot/henkilokunta/timonummenmaa.html">Timo Nummenmaa</a>. I am a member of <a href="http://www.sis.uta.fi/~tojape/smile.shtml">SMiLE research group</a> and <a href = "https://coe-gamecult.org/">CoE GameCult</a>. My research focuses on Bayesian approach and its applications to game culture studies. I have also cooperated with researchers from other disciplines such as game culture studies, business and management.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
@@ -96,14 +96,14 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"><i class="fas fa-object-group"></i> Bayesian methodology development</h3>
-              <p>My research focuses on text mining related problems such as multiple sources, collective analysis and underlying temporal dynamics.</p>
+              <p>My research focuses on text mining related problems such as multiple sources, underlying temporal dynamics and collective analysis.</p>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"><i class="fas fa-handshake"></i> Collatorative Works</h3>
-              <p>I mainly cooperate with researchers from the <a href = "https://coe-gamecult.org/">CoE GameCult</a> currently, we focus on issues such as establishing game genres and player experience studies.</p>
+              <p>Currently, I mainly cooperate with researchers from <a href = "https://coe-gamecult.org/">CoE GameCult</a>, we focus on issues such as establishing player types and game developer community studies.</p>
               
             </div>
           </div>
