--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <span class="text-primary"></span>
           </h1>
           <div class="subheading mb-5">
-            <a href="mailto:name@email.com">Lu.Chien@uta.fi</a>/
+            <a href="mailto:name@email.com">Chien.Lu@tuni.fi</a>/
             <a>B2026</a>
           </div>
           <p class="mb-5">I am a doctoral researcher at Tampere University under the supervision of <a href = "http://www.sis.uta.fi/~tojape/">Jaakko Peltonen</a> and <a href = "http://www.uta.fi/sis/yhteystiedot/henkilokunta/timonummenmaa.html">Timo Nummenmaa</a>. I am a member of <a href="http://www.sis.uta.fi/~tojape/smile.shtml">SMiLE research group</a> and <a href = "https://coe-gamecult.org/">CoE GameCult</a>. My research focuses on Bayesian approach and its applications to game culture studies. I have also cooperated with researchers from other disciplines such as game culture studies, business and management.</p>
