--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Chien Lu's personal webpage</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -69,7 +69,7 @@
             <a href="mailto:name@email.com">Chien.Lu@tuni.fi</a>/
             <a>B2026</a>
           </div>
-          <p class="mb-5">I am a doctoral researcher at Tampere University under the supervision of <a href = "http://www.sis.uta.fi/~tojape/">Jaakko Peltonen</a> and <a href = "http://www.uta.fi/sis/yhteystiedot/henkilokunta/timonummenmaa.html">Timo Nummenmaa</a>. I am a member of <a href="http://www.sis.uta.fi/~tojape/smile.shtml">SMiLE research group</a> and <a href = "https://coe-gamecult.org/">CoE GameCult</a>. My research focuses on Bayesian approach and its applications to game culture studies. I have also cooperated with researchers from other disciplines such as game culture studies, business and management.</p>
+          <p class="mb-5">I am a doctoral researcher at Tampere University under the supervision of <a href = "http://www.sis.uta.fi/~tojape/">Jaakko Peltonen</a> and <a href = "http://www.uta.fi/sis/yhteystiedot/henkilokunta/timonummenmaa.html">Timo Nummenmaa</a>. I am a member of <a href="http://www.sis.uta.fi/~tojape/smile.shtml">SMiLE research group</a> and <a href = "https://coe-gamecult.org/">CoE GameCult</a>. My research focuses on Bayesian approach and its applications to game culture studies. I have also cooperated with researchers from other disciplines such as business and management and software development.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
@@ -138,12 +138,17 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="teaching">
         <div class="my-auto">
+          <h2 class="mb-5">Teaching</h2>
+          <!--
           <p>So Far No</p>
           <img src="img/dog_poo_luck.png" alt="So far no" style="width:500px;height:400px;">
-
-          <!--<h2 class="mb-5">Teaching</h2>
-          <div class="subheading mb-3">Office Hours</div>
-              <p>Tuesday 11:00-13:00, Thursday 12:00-14:00 (B2026)</p>-->
+          -->
+          <h3 class="mb-0"><i class="fas fa-keyboard text-warning"></i> Introduction to R</h3>
+          <div class="subheading"><i class="fas fa-chalkboard-teacher"></i> Lecturer</div>
+          <div>Tampere Summer School 2019, Tampere University <a href = "https://www.tuni.fi/en/study-with-us/introduction-r-tampere-summer-school">[see the corresponding webpage]</a></div>
+          <!--
+          <div>Course materials can be found <a href="http://www.sis.uta.fi/~tojape/smile.shtml">[here]</a></div>
+          -->
           <!--
           <div class="subheading mb-3">Materials and Tutorials</div>
           <ul class="list-inline list-icons">
@@ -170,7 +175,10 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
-          So Far No
+        <h2 class="mb-5">Publications</h2>
+        <h3 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h3>
+        
+        <div><i class="fas fa-book"></i> Xiaozhou Li, Chien Lu, Jaakko Peltonen, and Zheying Zhang. A Statistical Analysis of Steam User Profiles towards Personalized Gamification. In proceedings of GamiFIN 2019, 3rd Annual International GamiFIN conference, in press, 2019. [best paper award]</div>
         </div>
       </section>
 
