--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
           <h3 class="mb-0"><i class="fas fa-keyboard text-warning"></i> Introduction to R</h3>
           <div class="subheading"><i class="fas fa-chalkboard-teacher"></i> Lecturer</div>
           <div>Tampere Summer School 2019, Tampere University <a href = "https://www.tuni.fi/en/study-with-us/introduction-r-tampere-summer-school">[see the corresponding webpage]</a></div>
-          <!--
-          <div>Course materials can be found <a href="http://www.sis.uta.fi/~tojape/smile.shtml">[here]</a></div>
-          -->
+          
+          <div>Course materials can be found <a href="https://humblelu.github.io/IntroR/">[here]</a></div>
+          
           <!--
           <div class="subheading mb-3">Materials and Tutorials</div>
           <ul class="list-inline list-icons">
