--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
         <h2 class="mb-5">Publications</h2>
         <h3 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h3>
         
-        <div><i class="fas fa-book"></i> Xiaozhou Li, Chien Lu, Jaakko Peltonen, and Zheying Zhang. A Statistical Analysis of Steam User Profiles towards Personalized Gamification. In proceedings of GamiFIN 2019, 3rd Annual International GamiFIN conference, in press, 2019. [best paper award]</div>
+        <div><i class="fas fa-book"></i> Li, Xiaozhou, Chien Lu, Jaakko Peltonen, and Zheying Zhang. "A Statistical Analysis of Steam User Profiles towards Personalized Gamification." In GamiFIN, pp. 217-228. 2019. [best paper award]</div>
+        <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, and Timo Nummenmaa. "Game Postmortems vs. Developer Reddit AMAs: Computational Analysis of Developer Communication." In FDG, in press. 2019.</div>
         </div>
       </section>
 
