--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#research">Research</a>
+            <a class="nav-link js-scroll-trigger" href="#research"Research</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -177,7 +177,7 @@
         <div class="my-auto">
         <h2 class="mb-5">Publications</h2>
         <h3 class="mb-0"><i class="fas fa-book-open text-warning"></i> Journal Papers</h3>
-        <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa and Kalero Järvelin. "The Usage of Large Data Sets in Consumer Online Behaviour: A Bibliometric and Computational Text-mining-driven Analysis of Previous Research." Journal of Business Research, 106:46-59, 2020.</div>
+        <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa and Kalero Järvelin. "The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research." Journal of Business Research, 106:46-59, 2020.</div>
         <br>  
         <h3 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h3>
         <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, and Timo Nummenmaa. "Game Postmortems vs. Developer Reddit AMAs: Computational Analysis of Developer Communication." In FDG, pp. 22:1-22:7. 2019.</div>
