--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
           <p>So Far No</p>
           <img src="img/dog_poo_luck.png" alt="So far no" style="width:500px;height:400px;">
           -->
-          <h3 class="mb-0"><i class="fas fa-keyboard text-warning"></i> Lecturer</h3>
-          <div class="subheading"><i class="fas fa-chalkboard-teacher"></i>Introduction to R (LUOYY027, <a href = "https://www.tuni.fi/en/study-with-us/introduction-r-tampere-summer-school">[Tampere Summer School]</a> 2019)</div>
+          <h3 class="mb-0"><i class="fas fa-chalkboard-teacher text-warning"></i> Lecturer</h3>
+          <div class="subheading"><i class="fas fa-keyboard"></i>Introduction to R (LUOYY027, [2019 <a href = "https://www.tuni.fi/en/study-with-us/introduction-r-tampere-summer-school">Tampere Summer School</a>])</div>
           <div>Course materials can be found <a href="https://humblelu.github.io/IntroR/">[here]</a></div>
           <!--
           <div class="subheading mb-3">Materials and Tutorials</div>
