--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@
         <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa and Kalero Järvelin. "The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research." Journal of Business Research, 106:46-59, 2020.</div>
         <br>  
         <h3 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h3>
-        <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, and Timo Nummenmaa. "Game Postmortems vs. Developer Reddit AMAs: Computational Analysis of Developer Communication." In FDG, pp. 22:1-22:7. 2019.</div>
-        <div><i class="fas fa-book"></i> Xiaozhou Li, Chien Lu, Jaakko Peltonen, and Zheying Zhang. "A Statistical Analysis of Steam User Profiles towards Personalized Gamification." In GamiFIN, pp. 217-228. 2019. [best paper award]</div>
+        <div><i class="fas fa-book"></i> Miikka Lehtonen, Chien Lu, Timo Nummenmaa, and Jaakko Peltonen. "Adoption of Requirements Wngineering Methods in Game Development." <i>EAI International Conference: ArtsIT, Interactivity & Game Creation</i>, 2019.</div>
+        <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, and Timo Nummenmaa. "Game Postmortems vs. Developer Reddit AMAs: Computational Analysis of Developer Communication." <i>International Conference on the Foundations of Digital Games</i>, 2019.</div>
+        <div><i class="fas fa-book"></i> Xiaozhou Li, Chien Lu, Jaakko Peltonen, and Zheying Zhang. "A Statistical Analysis of Steam User Profiles towards Personalized Gamification." <i>International GamiFIN conference</i>, 2019. [best paper award]</div>
         
         </div>
       </section>
