--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <img src="img/dog_poo_luck.png" alt="So far no" style="width:500px;height:400px;">
           -->
           <h3 class="mb-0"><i class="fas fa-chalkboard-teacher text-warning"></i> Lecturer</h3>
-          <div class="subheading"><i class="fas fa-keyboard"></i> Introduction to R (LUOYY027, <a href = "https://www.tuni.fi/en/study-with-us/introduction-r-tampere-summer-school">[Tampere Summer School 2019]</a>)</div>
+          <div class="subheading"><i class="fas fa-keyboard"></i> Introduction to R (LUOYY027, [Tampere Summer School 2019])</div>
           <div>Course materials can be found <a href="https://humblelu.github.io/IntroR/">[here]</a></div>
           <!--
           <div class="subheading mb-3">Materials and Tutorials</div>
