--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="my-auto">
         <h2 class="mb-5">Publications</h2>
         <h3 class="mb-0"><i class="fas fa-book-open text-warning"></i> Journal Papers</h3>
-        <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa and Kalero Järvelin. "The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research." Journal of Business Research, 106:46-59, 2020.</div>
+        <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa and Kalervo Järvelin. "The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research." Journal of Business Research, 106:46-59, 2020.</div>
         <br>  
         <h3 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h3>
         <div><i class="fas fa-book"></i> Chien Lu, Xiaozhou Li, Timo Nummenmaa, Zheying Zhang, and Jaakko Peltonen. "Patches and Player Community Perceptions: Analysis of No Man's Sky Steam Reviews." <i>DiGRA Conference</i>, 2020.</div>
