--- a/index.html
+++ b/index.html
@@ -173,14 +173,20 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
         <h2 class="mb-5">Publications</h2>
-        <h3 class="mb-0"><i class="fas fa-book-open text-warning"></i> Journal Papers</h3>
+        <h3 class="mb-0"><i class="fas fa-bezier-curve text-warning"></i> Methodology Development</h3>
+        <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h4>
+        <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Jyrki Nummenmaa and Kalervo Järvelin. "Probabilistic Dynamic Non-negative Group Factor Model for Multi-source Text Mining." <i>ACM International Conference on Information and Knowledge Management</i>, 2020.</div>
+        <div><i class="fas fa-book"></i> Chien Lu and Jaakko Peltonen. "Enhancing Nearest Neighbor Based Entropy Estimator for High Dimensional Distributions via Bootstrapping Local Ellipsoid." <i>AAAI Conference on Artificial Intelligence</i>, 2020.</div>
+        <br>
+        <br>
+        <h3 class="mb-0"><i class="fas fa-user-plus text-warning"></i> Empirical Analysis</h3>
+        <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Journal Papers</h4>
         <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa and Kalervo Järvelin. "The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research." Journal of Business Research, 2020.</div>
         <br>  
-        <h3 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h3>
+        <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h4>
         <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Jyrki Nummenmaa and Kalervo Järvelin. "Probabilistic Dynamic Non-negative Group Factor Model for Multi-source Text Mining." <i>ACM International Conference on Information and Knowledge Management</i>, 2020.</div>
         <div><i class="fas fa-book"></i> Chien Lu, Xiaozhou Li, Timo Nummenmaa, Zheying Zhang, and Jaakko Peltonen. "Patches and Player Community Perceptions: Analysis of No Man's Sky Steam Reviews." <i>DiGRA Conference</i>, 2020.</div>
         <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Timo Nummenmaa, Xiaozhou Li, and Zheying Zhang. "What Makes a Trophy Hunter? An Empirical Analysis of Reddit Discussions." <i>International GamiFIN conference</i>, 2020.</div>
-        <div><i class="fas fa-book"></i> Chien Lu and Jaakko Peltonen. "Enhancing Nearest Neighbor Based Entropy Estimator for High Dimensional Distributions via Bootstrapping Local Ellipsoid." <i>AAAI Conference on Artificial Intelligence</i>, 2020.</div>
         <div><i class="fas fa-book"></i> Miikka Lehtonen, Chien Lu, Timo Nummenmaa, and Jaakko Peltonen. "Adoption of Requirements Engineering Methods in Game Development: a Literature and Postmortem Analysis." <i>EAI International Conference: ArtsIT, Interactivity & Game Creation</i>, 2019.</div>
         <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, and Timo Nummenmaa. "Game Postmortems vs. Developer Reddit AMAs: Computational Analysis of Developer Communication." <i>International Conference on the Foundations of Digital Games</i>, 2019.</div>
         <div><i class="fas fa-book"></i> Xiaozhou Li, Chien Lu, Jaakko Peltonen, and Zheying Zhang. "A Statistical Analysis of Steam User Profiles towards Personalized Gamification." <i>International GamiFIN conference</i>, 2019. [best paper award]</div>
