--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
           -->
           <h3 class="mb-0"><i class="fas fa-chalkboard-teacher text-warning"></i> Lecturer</h3>
           <div class="subheading"><i class="fas fa-keyboard"></i> Introduction to R (LUOYY027, [Tampere Summer School 2019])</div>
+          <div class="subheading"><i class="fas fa-keyboard"></i> Introduction to R (LUOYY027, [Tampere Summer School 2020])</div>
           <div>Course materials can be found <a href="https://humblelu.github.io/IntroR/">[here]</a></div>
           <!--
           <div class="subheading mb-3">Materials and Tutorials</div>
