--- a/index.html
+++ b/index.html
@@ -185,12 +185,16 @@
         <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa and Kalervo Järvelin. "The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research." Journal of Business Research, 2020.</div>
         <br>  
         <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h4>
+        <div><i class="fas fa-book"></i> Chien Lu, Elina Koskinen, Dale	Leorke, Timo Nummenmaa, and Jaakko Peltonen. "The World Is Your Playground: A Bibliometric and Text Mining Analysis of Location-Based Game Research." <i>EAI International Conference: ArtsIT, Interactivity & Game Creation</i>, 2020.</div>
         <div><i class="fas fa-book"></i> Chien Lu, Xiaozhou Li, Timo Nummenmaa, Zheying Zhang, and Jaakko Peltonen. "Patches and Player Community Perceptions: Analysis of No Man's Sky Steam Reviews." <i>DiGRA Conference</i>, 2020.</div>
         <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Timo Nummenmaa, Xiaozhou Li, and Zheying Zhang. "What Makes a Trophy Hunter? An Empirical Analysis of Reddit Discussions." <i>International GamiFIN conference</i>, 2020.</div>
         <div><i class="fas fa-book"></i> Miikka Lehtonen, Chien Lu, Timo Nummenmaa, and Jaakko Peltonen. "Adoption of Requirements Engineering Methods in Game Development: a Literature and Postmortem Analysis." <i>EAI International Conference: ArtsIT, Interactivity & Game Creation</i>, 2019.</div>
         <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, and Timo Nummenmaa. "Game Postmortems vs. Developer Reddit AMAs: Computational Analysis of Developer Communication." <i>International Conference on the Foundations of Digital Games</i>, 2019.</div>
         <div><i class="fas fa-book"></i> Xiaozhou Li, Chien Lu, Jaakko Peltonen, and Zheying Zhang. "A Statistical Analysis of Steam User Profiles towards Personalized Gamification." <i>International GamiFIN conference</i>, 2019. [best paper award]</div>
         
+        <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Others</h4>
+        <div><i class="fas fa-book"></i> Chien Lu. "But Do Commit Messages Matter? An Empirical Association Analysis with Technical Debt." <i>Joint Proceedings of the Inforte Summer School on Software Maintenance and Evolution</i>, 2019.</div>
+      
         </div>
       </section>
 
