--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
         <h2 class="mb-5">Publications</h2>
         <h3 class="mb-0"></i> Methodology Development</h3>
         <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h4>
-        <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Jyrki Nummenmaa and Kalervo Järvelin. "Probabilistic Dynamic Non-negative Group Factor Model for Multi-source Text Mining." <i>ACM International Conference on Information and Knowledge Management</i>, 2020.</div>
-        <div><i class="fas fa-book"></i> Chien Lu and Jaakko Peltonen. "Enhancing Nearest Neighbor Based Entropy Estimator for High Dimensional Distributions via Bootstrapping Local Ellipsoid." <i>AAAI Conference on Artificial Intelligence</i>, 2020.</div>
+        <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Jyrki Nummenmaa, and Kalervo Järvelin. "Probabilistic Dynamic Non-negative Group Factor Model for Multi-source Text Mining." <i>ACM International Conference on Information and Knowledge Management</i>, 2020.</div>
+        <div><i class="fas fa-book"></i> Chien Lu, and Jaakko Peltonen. "Enhancing Nearest Neighbor Based Entropy Estimator for High Dimensional Distributions via Bootstrapping Local Ellipsoid." <i>AAAI Conference on Artificial Intelligence</i>, 2020.</div>
         <br>
         <br>
         <h3 class="mb-0"></i> Empirical Analysis</h3>
         <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Journal Papers</h4>
-        <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa and Kalervo Järvelin. "The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research." Journal of Business Research, 2020.</div>
+        <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa, and Kalervo Järvelin. "The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research." Journal of Business Research, 2020.</div>
         <br>  
         <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h4>
         <div><i class="fas fa-book"></i> Chien Lu, Elina Koskinen, Dale	Leorke, Timo Nummenmaa, and Jaakko Peltonen. "The World Is Your Playground: A Bibliometric and Text Mining Analysis of Location-Based Game Research." <i>EAI International Conference: ArtsIT, Interactivity & Game Creation</i>, 2020.</div>
