--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"><i class="fas fa-handshake"></i> Collatorative Works</h3>
-              <p>Currently, I mainly cooperate with researchers from <a href = "https://coe-gamecult.org/">CoE GameCult</a>, we focus on issues such as player analysis and game developement studies.</p>
+              <p>Currently, I mainly cooperate with researchers from <a href = "https://coe-gamecult.org/">CoE GameCult</a>, we focus on issues such as gamification, player studies, and game developement studies.</p>
               
             </div>
           </div>
