--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <span class="text-primary"></span>
           </h1>
           <div class="subheading mb-5">
-            <a href="mailto:name@email.com">Chien.Lu@tuni.fi</a>/
+            <a href="chien.lu@tuni.fi">Chien.Lu@tuni.fi</a>/
             <a>B2026</a>/
             <a>0503182588</a>
           </div>
