--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0"><i class="fas fa-university text-warning"></i>  Tampere University, Finland (2018-)</h3>
+              <div class="subheading"><i class="fas fa-graduation-cap"></i> Doctor of Philosophy</div>
+              <div> Doctoral Programme on Information and Systems</div>
+              <div><i class="fas fa-book"></i>  Thesis: An Improved Nearest Neighbor Based Entropy Estimator with Local Ellipsoid Correction and its Application to Evaluation of MCMC Posterior Samples <a href = "http://urn.fi/URN:NBN:fi:uta-201808032343">[see TamPub]</a> (Extension work later published in AAAI 2020)</div>
+              <p></p>
+            </div>
+          </div>
+          
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0"><i class="fas fa-university text-warning"></i>  University of Tampere, Finland (2015-2018)</h3>
               <div class="subheading"><i class="fas fa-graduation-cap"></i>  Master of Science</div>
               <div>Master's Degree Programme in Computational Big Data Analytics</div>
