--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
           <h2 class="mb-5">Research</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0"><i class="fas fa-object-group"></i> Bayesian methodology development</h3>
-              <p>My research focuses on text mining related problems such as multiple sources, underlying temporal dynamics and collective analysis.</p>
+              <h3 class="mb-0"><i class="fas fa-object-group"></i> Bayesian Data Analysis, Probabilistic Machine Learning</h3>
+              <p>Methodology development focusing on text mining related problems such as multiple sources, underlying temporal dynamics and collective analysis.</p>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0"><i class="fas fa-handshake"></i> Collatorative Works</h3>
+              <h3 class="mb-0"><i class="fas fa-handshake"></i> Empirical Analysis, Collatorative Works</h3>
               <p>Currently, I mainly cooperate with researchers from <a href = "https://coe-gamecult.org/">CoE GameCult</a>, we focus on issues such as gamification, player studies, and game developement.</p>
               
             </div>
