--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <h2 class="mb-5">Publications</h2>
         <h3 class="mb-0"></i> Methodology Development</h3>
         <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h4>
-        <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Timo Nummenmaa, Jyrki Nummenmaa, and Kalervo Järvelin. <b>Cross-structural Factor-topic Model: Document Analysis with Sophisticated Covariates.</b> <i>Asian Conference on Machine Learning</i>, 2021.</div>
+        <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Timo Nummenmaa, Jyrki Nummenmaa, and Kalervo Järvelin. <b>Cross-structural Factor-topic Model: Document Analysis with Sophisticated Covariates.</b> <i>Asian Conference on Machine Learning</i>, 2021. [best student paper award runner-up]</div>
         <div><i class="fas fa-book"></i> Chien Lu, Jaakko Peltonen, Jyrki Nummenmaa, and Kalervo Järvelin. <b>Probabilistic Dynamic Non-negative Group Factor Model for Multi-source Text Mining.</b> <i>ACM International Conference on Information and Knowledge Management</i>, 2020.</div>
         <div><i class="fas fa-book"></i> Chien Lu, and Jaakko Peltonen. <b>Enhancing Nearest Neighbor Based Entropy Estimator for High Dimensional Distributions via Bootstrapping Local Ellipsoid.</b> <i>AAAI Conference on Artificial Intelligence</i>, 2020.</div>
         <br>
