--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0"><i class="fas fa-university text-warning"></i>  Tampere University, Finland (2018-)</h3>
               <div class="subheading"><i class="fas fa-graduation-cap"></i> Doctor of Philosophy</div>
-              <div> Doctoral Programme on Information and Systems (DPIS)</div>
+              <div> Doctoral Programme of Computing and Electrical Engineering (DPCEE)</div>
               <p></p>
             </div>
           </div>
