--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0"><i class="fas fa-object-group"></i> Bayesian Data Analysis, Probabilistic Machine Learning</h3>
-              <p>Methodology development focusing on text mining related problems such as multiple sources, underlying temporal dynamics and collective analysis.</p>
+              <p>Methodology development focusing on probabilistic representation learning problems such as multiple representations, underlying temporal dynamics, and collective data analysis.</p>
             </div>
           </div>
 
