--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <br>
         <h3 class="mb-0"></i> Empirical Analysis</h3>
         <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Journal Papers</h4>
-        <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa, and Kalervo Järvelin. <b>The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research.</b> Journal of Business Research, 2020.</div>
+        <div><i class="fas fa-book"></i> Mika Vanhala, Chien Lu, Jaakko Peltonen, Sanna Sundqvist, Jyrki Nummenmaa, and Kalervo Järvelin. <b>The Usage of Large Data Sets in Consumer Online Behaviour: a Bibliometric and Computational Text-mining-driven Analysis of Previous Research.</b> <i>Journal of Business Research (JBR)</i>, 2020.</div>
         <br>  
         <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Conference Papers</h4>
         <div><i class="fas fa-book"></i> Chien Lu, Lobna Hassan, Oğuz Buruk, Timo Nummenmaa and Jaakko Peltonen. <b>"Switch" Up Your Exercise: An Empirical Analysis of Online User Discussion of the Ring Fit Adventure Exergame.</b> <i>International GamiFIN conference (GamiFIN)</i>, 2021.</div>
