--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
         <div><i class="fas fa-book"></i> Xiaozhou Li, Chien Lu, Jaakko Peltonen, and Zheying Zhang. <b>A Statistical Analysis of Steam User Profiles towards Personalized Gamification.</b> <i>International GamiFIN conference (GamiFIN)</i>, 2019. [<i class="fas fa-trophy text-warning"></i> best paper award] <a href="http://ceur-ws.org/Vol-2359/paper19.pdf"><i class="fas fa-file-pdf"></i></a></div>
         <br>
         <h4 class="mb-0"><i class="fas fa-book-open text-warning"></i> Others</h4>
-        <div><i class="fas fa-book"></i> Chien Lu. <b>But Do Commit Messages Matter? An Empirical Association Analysis with Technical Debt.</b> <i>Joint Proceedings of the Inforte Summer School on Software Maintenance and Evolution</i>, 2019. <a href="http://ceur-ws.org/Vol-2520/paper1b.pdf"><i class="fas fa-file-pdf"></i></a></div>
-      
+        <div><i class="fas fa-book"></i> Chien Lu, Diego A Mejía-Alandia, and Jaakko Peltonen. <b>Game Genres as Social Dimensions: a Computational Revisit.</b> <i>Nordic Conference of the Digital Games Research Association (Nordic DiGRA)</i>, 2023. </div>
+        <div><i class="fas fa-book"></i> Chien Lu. <b>But Do Commit Messages Matter? An Empirical Association Analysis with Technical Debt.</b> <i>Joint Proceedings of the Inforte Summer School on Software Maintenance and Evolution</i>, 2019. <a href="http://ceur-ws.org/Vol-2520/paper1b.pdf"><i class="fas fa-file-pdf"></i></a></div>      
         </div>
       </section>
 
