--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a>B2026</a>/
             <a>0503182588</a>
           </div>
-          <p class="mb-5">I am a doctoral researcher at Tampere University under the supervision of <a href = "http://www.sis.uta.fi/~tojape/">Jaakko Peltonen</a> and <a href = "https://www.tuni.fi/en/timo-nummenmaa">Timo Nummenmaa</a>. I am a member of <a href="http://www.sis.uta.fi/~tojape/smile.shtml">SMiLE research group</a> and <a href = "https://coe-gamecult.org/">CoE GameCult</a>. My research focuses on Bayesian approach and its applications to game studies. I have also cooperated with researchers from other disciplines such as business and management and software development.</p>
+          <p class="mb-5">I am a doctoral researcher at the <a href = "https://coe-gamecult.org/">Centre of Excellence in Game Culture Studies</a>, Tampere University. My research focuses on Bayesian data analysis and its applications to game studies. I have also cooperated with researchers from other disciplines such as business and management and software development.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/chienlu/">
