--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
               <h3 class="mb-0"><i class="fas fa-university text-warning"></i>  Tampere University, Finland (2018-)</h3>
               <div class="subheading"><i class="fas fa-graduation-cap"></i> Doctor of Philosophy</div>
               <div> Doctoral Programme of Computing and Electrical Engineering (DPCEE)</div>
+              <div><i class="fas fa-book"></i>  Dissertation: Shallow Representations, Profound Discoveries : A methodological study of game culture in social media <a href = "http://urn.fi/URN:ISBN:978-952-03-3031-6">[see in Trepo]</a></div>
               <p></p>
             </div>
           </div>
@@ -129,7 +130,7 @@
               <h3 class="mb-0"><i class="fas fa-university text-warning"></i>  University of Tampere, Finland (2015-2018)</h3>
               <div class="subheading"><i class="fas fa-graduation-cap"></i>  Master of Science</div>
               <div>Master's Degree Programme in Computational Big Data Analytics (CBDA)</div>
-              <div><i class="fas fa-book"></i>  Thesis: An Improved Nearest Neighbor Based Entropy Estimator with Local Ellipsoid Correction and its Application to Evaluation of MCMC Posterior Samples <a href = "http://urn.fi/URN:NBN:fi:uta-201808032343">[see TamPub]</a> (Extension work later published in AAAI 2020)</div>
+              <div><i class="fas fa-book"></i>  Thesis: An Improved Nearest Neighbor Based Entropy Estimator with Local Ellipsoid Correction and its Application to Evaluation of MCMC Posterior Samples <a href = "http://urn.fi/URN:NBN:fi:uta-201808032343">[see in Trepo]</a> (Extension work later published in AAAI 2020)</div>
               <p></p>
             </div>
           </div>
