--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0"><i class="fas fa-university text-warning"></i>  Tampere University, Finland (2018-)</h3>
+              <h3 class="mb-0"><i class="fas fa-university text-warning"></i>  Tampere University, Finland (2018-2023)</h3>
               <div class="subheading"><i class="fas fa-graduation-cap"></i> Doctor of Philosophy</div>
               <div> Doctoral Programme of Computing and Electrical Engineering (DPCEE)</div>
               <div><i class="fas fa-book"></i>  Dissertation: Shallow Representations, Profound Discoveries : A methodological study of game culture in social media <a href = "http://urn.fi/URN:ISBN:978-952-03-3031-6">[see in Trepo]</a></div>
