--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a>B2026</a>/
             <a>0503182588</a>
           </div>
-          <p class="mb-5">I am a doctoral researcher at the <a href = "https://coe-gamecult.org/">Centre of Excellence in Game Culture Studies</a> at Tampere University. My research focuses on Bayesian data analysis and its applications to game studies. I have also cooperated with researchers from other disciplines such as business and management and software development.</p>
+          <p class="mb-5">I am a postdoctoral research fellow at Tampere University. My research focuses on Probabilistic machine learning, Bayesian data analysis, and their applications to game studies. I have also cooperated with researchers from other disciplines including business and management and software development.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/chienlu/">
@@ -95,15 +95,15 @@
           <h2 class="mb-5">Research</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0"><i class="fas fa-object-group"></i> Bayesian Data Analysis, Probabilistic Machine Learning</h3>
-              <p>Methodology development focusing on probabilistic representation learning problems such as multiple representations, underlying temporal dynamics, and collective data analysis.</p>
+              <h3 class="mb-0"><i class="fas fa-object-group"></i> Probabilistic Machine Learning, Bayesian Data Analysis</h3>
+              <p>Methodology development focusing on probabilistic representation learning problems such as multiple representations, underlying temporal dynamics, and heterogeneous data analysis.</p>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0"><i class="fas fa-handshake"></i> Empirical Analysis, Collatorative Works</h3>
-              <p>Currently, I mainly cooperate with researchers from <a href = "https://coe-gamecult.org/">CoE GameCult</a>, we focus on issues such as gamification, player studies, and game developement.</p>
+              <h3 class="mb-0"><i class="fas fa-handshake"></i> Empirical Analysis, Collaborative Works</h3>
+              <p>Currently, I mainly cooperate with researchers from <a href = "https://coe-gamecult.org/">CoE GameCult</a>, we focus on issues such as player experiences, player typologies, game development, and gamification. I am particularly interested in how to leverage video games communicate tools for societal issues such as climate change and animal welfare</p>
               
             </div>
           </div>
